name: nexus
version: 0.2
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: LICENSE
synopsis: A little actor-based chat server.
category: Network
author: Jeanne-Kamikaze
data-dir: ""
 
executable nexus
    main-is:       Main.hs
  build-depends:   
                   base >= 4,
                   network,
                   bytestring,
                   transformers,
                   containers,
                   stm,
                   either
  ghc-options:     -Wall
